date format + datas api

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Vent actuelle</h1>
+    <p>Vitesse du vent : </p> <p id="wind-speed"></p>
+    <p>Direction du vent : </p> <p id="wind-direction"></p>
+    <p>Rafale de vent : </p> <p id="wind-gusts"></p>
 </body>
+<script src="./api.js"></script>
 </html>
