--- a/index.html
+++ b/index.html
@@ -3,11 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <title>TP Node JS</title>
+    <script>
+      async function getData() {
+        const data = await fetch('http://127.0.0.1:3000/', {method: "GET", headers: {
+          "Content-Type": "application/json",
+          'Access-Control-Allow-Origin': '*',
+          'Access-Control-Allow-Headers': '*',
+        }})
+        // .then(function (response) {
+          let datas = await data.json();
+          console.log(datas);
+        // })
+      }
+      getData();
+    </script>
 </head>
 <body>
-    <h1>Vent actuelle</h1>
-    <p>Vitesse du vent : </p> <p id="wind-speed"></p>
-    <p>Direction du vent : </p> <p id="wind-direction"></p>
-    <p>Rafale de vent : </p> <p id="wind-gusts"></p>
+    <div class="container" id="time_list">
+        <div class="row">
+          <div class="col">Heure</div>
+          <div class="col">Vitesse du vent</div>
+          <div class="col">Direction du vent</div>
+          <div class="col">Rafale de vent</div>
+          <div class="col">Beaufort</div>
+        </div>
+      </div>
+</body>
+</html>
